# adk-langchain-a2a

./: .gitignore  README.md
langchain-a2a-example/: .env.example  pyproject.toml  requirements.txt
langchain-a2a-example/agent/: __init__.py  agent_app.py  agent_executor.py  order_agent.py
langchain-a2a-example/deployment/: a2a_class_methods.json  deploy_agent.py  deploy_order_agent.sh
triage-agent/: GEMINI.md  README.md  pyproject.toml
triage-agent/agent/: .agent_engine_config.json  .env.example  agent.py  agent_runtime_app.py  requirements.txt  tools.py
triage-agent/agent/app_utils/: telemetry.py  typing.py
