[project]
name = "order-support-a2a"
version = "0.1.0"
description = "Mocked LangChain order & refund support agent, exposed over A2A."
requires-python = ">=3.11"
# a2a-sdk pinned to match google-adk's requirement (>=0.3.4,<0.4) so the
# ADK RemoteA2aAgent consumer and this server speak the same protocol version.
dependencies = [
    "a2a-sdk[http-server]>=0.3.4,<0.4",
    "langchain>=1.0.0",
    "langchain-google-vertexai>=2.0.0",
]

[tool.uv]
package = false
